# ix-packages

./: .actrc  .gitignore  .mcp.json  CLAUDE.md
.claude/commands/: clean-code.md  commit-push.md
.github/: act-secrets.example  act-vars.example
.github/scripts/: test-workflow-locally.sh
.github/workflows/: README.md  ci-cd.yml  version-bump.yml
ix-auth/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_EXAMPLE.md  README.md  pyproject.toml  pytest.ini
ix-auth/src/ix_auth/: __init__.py  config.py
ix-auth/src/ix_auth/dependencies/: __init__.py  fastapi.py
ix-auth/src/ix_auth/helpers/: __init__.py  user_management.py
ix-auth/src/ix_auth/middleware/: __init__.py  fastapi.py
ix-auth/src/ix_auth/models/: __init__.py  db_models.py  role_config.py  token.py  user.py
ix-auth/src/ix_auth/providers/: __init__.py  azure.py  base.py  mock.py
ix-auth/src/ix_auth/repositories/: __init__.py  user_repository.py
ix-auth/src/ix_auth/utils/: __init__.py  jwt.py  permissions.py  roles.py
ix-auth/tests/: conftest.py  test_dependencies.py.bak  test_jwt.py.bak  test_middleware.py.bak
